--- a/index.html
+++ b/index.html
@@ -42,36 +42,33 @@
                     ALANAH RODRIGUEZ
                     </h2>
                     <ul class="sub-texto">
-                        <li>Evite acidentes. Faça de propósito.. Pobre só enche a barriga quando morre afogado.. Um é
-                            pouco, dois é bom e três é ímpar.. Há males que vêm para o pior.. Cemeteries are just
-                            garbage dumps filled with humans.
+                        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Debitis quo mollitia corporis
+                            possimus omnis fuga fugiat consequuntur, dolores a? Voluptates aspernatur laudantium minus
+                            minima, blanditiis animi. Iusto modi ipsa perspiciatis.
 
                         </li>
 
-                        <li>Os últimos serão os primeiros e os do meio sempre serão os do meio.. Há muitas coisas mais
-                            importantes que o dinheiro...mas elas custam caro!. Se tamanho fosse documento o elefante
-                            era dono do circo.. Eu sem mim não existo.. O dinheiro não traz felicidade, então, dê todo o
-                            seu pra mim e seja feliz..
+                        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam vitae aliquid nesciunt,
+                            consectetur blanditiis iste dignissimos aut impedit, doloremque quibusdam dicta molestiae
+                            voluptates facere, incidunt rerum expedita. Suscipit, assumenda illum.
 
                         </li>
 
-                        <li> Jesus salva! Que passa para Moisés, que chuta e é gooooolllll.... Pobre só enche a barriga
-                            quando morre afogado.. Por causa da pressa, é que a mosca nasceu sem osso.. Como se escreve
-                            o número 0 em algarismos romanos?. Por que 'tudo junto' se escreve separado e 'separado' se
-                            escreve tudo junto?.
+                        <li> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores adipisci sit autem odio
+                            doloribus ratione. Facere odio veniam, est quibusdam quidem, reprehenderit tempora, aliquid
+                            temporibus commodi nemo nisi. Sit, sed.
 
                         </li>
-                        <li>Por causa da pressa, é que a mosca nasceu sem osso.. A única mulher que andou na linha o
-                            trem pegou.. A vida é uma sucessão de sucessivos que sucedem sucessivamente sem cessar.. Na
-                            vida tudo é passageiro, menos o motorista e o cobrador…. Qual é o diminutivo de golfinho?.
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis laudantium odit sapiente
+                            quo maiores cum aliquam dignissimos magni ab dolorum, illo velit, ipsum unde minima sit
+                            nisi? Dolorum, nihil ipsum?
 
 
 
                         </li>
-                        <li>Daqui pra frente, quanto mais, principalmente.. Se tamanho fosse documento o elefante era
-                            dono do circo.. Uma coisa é uma coisa, outra coisa é outra coisa.. Diz-me com quem andas e
-                            te direi se vou contigo.. A vida é uma sucessão de sucessivos que sucedem sucessivamente sem
-                            cessar..</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis id provident recusandae, illo
+                            eaque magni consectetur, in nesciunt odit accusantium eius dolores neque pariatur magnam
+                            maiores sint delectus porro cum.</li>
 
                     </ul>
             </div>
